# Comerkle

./: CHANGELOG.md  Comerkle.cabal  README.md
app/: Main.hs
src/: Comerkle.hs
